--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
